Bug #16494: Updates that set a column to NULL fail sometimes

When building the UPDATE query to send to the remote server, the
 federated storage engine built the query incorrectly if it was updating
 a field to be NULL.

 Thanks to Bjrn Steinbrink for an initial patch for the problem.