sql/ha_federated.cc
@@ -1857,8 +1857,8 @@ int ha_federated::update_row(const byte *old_data, byte *new_data)
   In this loop, we want to match column names to values being inserted
   (while building INSERT statement).
 
-  Iterate through table->field (new data) and share->old_filed (old_data)
-  using the same index to created an SQL UPDATE statement, new data is
+  Iterate through table->field (new data) and share->old_field (old_data)
+  using the same index to create an SQL UPDATE statement. New data is
   used to create SET field=value and old data is used to create WHERE
   field=oldvalue
  */
@@ -1870,29 +1870,27 @@ int ha_federated::update_row(const byte *old_data, byte *new_data)
     update_string.append(FEDERATED_EQ);
 
     if ((*field)->is_null())
-      new_field_value.append(FEDERATED_NULL);
+      update_string.append(FEDERATED_NULL);
     else
     {
       /* otherwise = */
       (*field)->val_str(&new_field_value);
       (*field)->quote_data(&new_field_value);
-
-      if (!field_in_record_is_null(table, *field, (char*) old_data))
-        where_string.append(FEDERATED_EQ);
+      update_string.append(new_field_value);
+      new_field_value.length(0);
     }
 
     if (field_in_record_is_null(table, *field, (char*) old_data))
       where_string.append(FEDERATED_ISNULL);
     else
     {
+      where_string.append(FEDERATED_EQ);
       (*field)->val_str(&old_field_value,
                         (char*) (old_data + (*field)->offset()));
       (*field)->quote_data(&old_field_value);
       where_string.append(old_field_value);
+      old_field_value.length(0);
     }
-
-    update_string.append(new_field_value);
-    new_field_value.length(0);
 
     /*
       Only append conjunctions if we have another field in which
@@ -1903,7 +1901,6 @@ int ha_federated::update_row(const byte *old_data, byte *new_data)
       update_string.append(FEDERATED_COMMA);
       where_string.append(FEDERATED_AND);
     }
-    old_field_value.length(0);
   }
   update_string.append(FEDERATED_WHERE);
   update_string.append(where_string);
